--- a/TwAvoid_1.1
+++ b/TwAvoid_1.1
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @name        TwAvoid　🔲
+// @name        TwAvoid
 // @namespace        http://tampermonkey.net/
 // @version        1.1
 // @description        Twitter Filter
